--- a/src/Buff Folder/WaitListPage.css
+++ b/src/Buff Folder/WaitListPage.css
@@ -160,7 +160,23 @@ form {
   }
 }
 
+@media (max-width: 820px) {
+  form {
+    height: 20vh;
+  }
+}
+
+@media (max-width: 768px) {
+  form {
+    height: 22vh;
+  }
+}
+
 @media (max-width: 425px) {
+
+  form {
+    height: initial;
+  }
 
   .access-words h1 {
     font-size: 42px;
